# joseph-academy

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  sourceme_dev
.github/: copilot-instructions.md
content/bootstrap/: identity_bootstrap.yaml
content/catalog/: areas.yaml  capabilities.yaml  content_index.yaml  materials.yaml  milestones.yaml  plan_templates.yaml  playlists.yaml  skills.yaml  stages.yaml  subjects.yaml
deploy/config/: README.md
deploy/dev/: .env.dev  Dockerfile.control_plane  docker-compose.yml  down.sh  lib.sh  reset.sh  setup.sh
deploy/production/: README.md
docs/: README.md  operator-playbook.md
docs/architecture/: delivery-workspace-contract.md  executable-drills-and-assignment-delivery.md  how-live-materials-work.md  learning-product-definition.md  planning-authoring-and-runtime.md  runtime-program-contract.md
docs/authoring/: README.md  ai-content-generation-contract.md  arithmetic-teaching-guidance.md  authoring-rules.md  authoring-workflow.md  curriculum-slice-brief-template.md  household-arithmetic-fact-fluency-brief.md  llm-authoring-workflow.md  product-and-curriculum-model.md  program-brief-template.md  repeatable-prompts.md  simple-content-model.md  subject-area-brief-template.md  track-authoring-brief.md
docs/deploy/: README.md
docs_site/: docusaurus.config.mjs  package-lock.json  package.json  sidebars.js
docs_site/docs/: intro.md
llm/: 00-cornerstone-curriculum-prompt.md  10-subject-area-brief-template.md  README.md
rust/: Cargo.toml
rust/apps/control_plane/: Cargo.toml
rust/apps/control_plane/src/: main.rs
rust/apps/ja_control_plane/: Cargo.toml
rust/apps/ja_control_plane/src/: main.rs
rust/crates/catalog/: Cargo.toml
rust/crates/catalog/src/: lib.rs
rust/crates/control_plane/: Cargo.toml
rust/crates/control_plane/migrations/: 0001_initial.sql  0002_runtime_vocabulary.sql
rust/crates/control_plane/src/: config.rs  domain.rs  http.rs  lib.rs  service.rs
rust/crates/control_plane/src/runtime/: arithmetic_fact_fluency.rs  mod.rs
rust/crates/control_plane/src/runtime/arithmetic_fact_fluency_v1/: mixed_add_sub_to_10.rs  mixed_add_sub_to_20.rs  mod.rs  readiness_within_5.rs  shared.rs
rust/crates/ja_catalog/: Cargo.toml
rust/crates/ja_catalog/src/: lib.rs
rust/crates/ja_control_plane/: Cargo.toml
rust/crates/ja_control_plane/migrations/: 0001_initial.sql
rust/crates/ja_control_plane/src/: config.rs  domain.rs  http.rs  lib.rs  service.rs
rust/crates/learning_activity_runtime/: Cargo.toml
rust/crates/learning_activity_runtime/src/: lib.rs
rust/crates/learning_activity_runtime/src/arithmetic_fact_fluency_v1/: mixed_add_sub_to_10.rs  mixed_add_sub_to_20.rs  readiness_within_5.rs  shared.rs
scripts/: render_catalog_docs.py  render_library_docs.py  sync_docs_site_docs.py
tests/: test_pathway_library.py  test_render_catalog_docs.py  test_render_library_docs.py  test_sync_docs_site_docs.py
(+80 files in other folders)
