[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cornerstone-dev"
version = "0.1.0"
description = "Developer tooling for the Cornerstone MVP repository."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff==0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "scripts",
    "tests",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
